adding barplot of predicted days for Africa 1992 assessment

--- a/climate/research/oregon/interpolation/presentation_global_run_scalingup_assessment.Rmd
+++ b/climate/research/oregon/interpolation/presentation_global_run_scalingup_assessment.Rmd
@@ -11,16 +11,15 @@ mode        : selfcontained # {standalone, draft}
 knit        : slidify::knit2slides
 ---
 
-```{r,echo=F}
+```{r,echo=FALSE}
 
 #First let's set up the input parameters for the script in R:
 
 in_dir <- "/data/project/layers/commons/NEX_data/output_run10_1500x4500_global_analyses_pred_1992_09012015"
 
-#region_name <- "world" #PARAM 13 #reg4 South America, Africa reg5,Europe reg2, North America reg1, Asia reg3
-#mosaicing_method <- c("unweighted","use_edge_weights")
-out_suffix <- paste(region_name,"_","pred_1992_09032015",sep="") 
-#_mosaic_run10_1500x4500_global_analyses_06212015
+#region_name <- "reg4" #PARAM 13 #reg4 South America, Africa reg5,Europe reg2, North America reg1, Asia reg3
+#out_suffix <- paste(region_name,"_","pred_1992_09032015",sep="") 
+out_suffix <- "pred_1992_09032015"
 #day_to_mosaic <- c("20100831",
 #                   "20100901") #PARAM7
 
@@ -28,11 +27,12 @@ out_suffix <- paste(region_name,"_","pred_1992_09032015",sep="")
 
 ## Tiles of 1500x4500 km
 
+
 There were 43 tiles for region 4 (Africa)
 
 1. Tiles were run for 365 days.
 2. Year tested was 1992.
-3. Assessment of number of days predicted and accuracy was carried out.
+3. Assessments for the number of days predicted and accuracy were carried out.
 
 
 --- .class #id 
@@ -46,7 +46,6 @@ img {
 </style>
  
 
-
 # Tiles of 1500x4500km global run 
 
 ```{r, echo=FALSE}
@@ -59,13 +58,8 @@ image_file1 <- file.path(in_dir,fname)
 ```
 
 ```{r image_file1, echo = F, results = 'asis'}
-#| I am text to the left  | ![Flowers](/flowers.jpeg) |
-#md_str <- paste('\n|        |![](',image_file1,')\n',sep="") 
-#md_str <- paste('\n->![alt text](',image_file1,'),<-\n',sep="")
-#<center>![Alt test](http://upload.wikimedia.org/wikipedia/en/b/bc/Wiki.png)</center>
 md_str <- paste('\n<center>![](',image_file1,')<center>\n',sep="")
-#md_str <- paste('\n![](',image_file1,'#center)\n',sep="")
-#fig.align = "center"
+
 cat(md_str)
 ```
 
@@ -74,8 +68,6 @@ cat(md_str)
 # ACCUARY PER TILES FOR MODEL 1
 
 ```{r, echo=FALSE}
-#image_file2 <- file.path(in_dir,"Figure9_clim_mosaics_day_test_edge_weighted_20100831_world_mosaic_07092015.png")
-
 
 fname <- paste("Figure2a_boxplot_with_oultiers_by_tiles_mod1_run10_1500x4500_global_analyses_pred_1992_09012015.png")
 image_file2 <- file.path(in_dir,fname)
@@ -86,12 +78,10 @@ image_file3 <- file.path(in_dir,fname)
 ```
 
 
-```{r image_file2, echo = F, results = 'asis', fig.show = 'hold', out.width = '50%',out.extra='style=""'}
+```{r image_file2, image_file3 , echo = F, results = 'asis', fig.show = 'hold', out.width = '50%',out.extra='style=""'}
 
 md_str <- paste('\n![](',image_file2,') ','![](',image_file3,')\n',sep="") 
 cat(md_str)
-#md_str <- paste('\n![](',image_file2,')\n',sep="") 
-#cat(md_str)
 
 #![alt-text-1](image1.png "title-1") ![alt-text-2](image2.png "title-2")
 
@@ -184,7 +174,7 @@ cat(md_str)
 
 ---
 
-# Predicted less than 367
+# Predicted tiles for 1992
 
 ```{r, echo=FALSE}
 #image_file1 <- file.path(in_dir,"Figure9_clim_mosaics_day_test_unweighted_20100831_world_mosaic_07092015")
@@ -208,7 +198,7 @@ cat(md_str)
 
 ---
 
-# Predicted less than 365
+# Predicted less than 365, at least one missing day
 
 ```{r, echo=FALSE}
 #image_file1 <- file.path(in_dir,"Figure9_clim_mosaics_day_test_unweighted_20100831_world_mosaic_07092015")
@@ -228,6 +218,37 @@ md_str <- paste('\n<center>![](',image_file10,')<center>\n',sep="")
 #md_str <- paste('\n![](',image_file1,'#center)\n',sep="")
 #fig.align = "center"
 cat(md_str)
+```
+---
+
+---
+# Missing days
+
+```{r echo = F}
+
+#tb <- read.table(file=file.path(out_dir,paste("tb_diagnostic_v_NA","_",out_suffix,".txt",sep="")),sep=",")
+tb <- read.table(file.path("/data/project/layers/commons/NEX_data/output_run10_1500x4500_global_analyses_pred_1992_09012015","tb_diagnostic_v_NA_run10_1500x4500_global_analyses_pred_1992_09012015.txt"),sep=",")
+
+#table(tb$pred_mod)
+#table(tb$index_d)
+#table(subset(tb,pred_mod!="mod_kr"))
+#table(subset(tb,pred_mod=="mod1")$index_d)
+#aggregate()
+tb$predicted <- 1
+test <- aggregate(predicted~pred_mod+tile_id,data=tb,sum)
+#as.character(unique(test$tile_id)) #141 tiles
+#dim(subset(test,test$predicted==365 & test$pred_mod=="mod1"))
+#histogram(subset(test, test$pred_mod=="mod1")$predicted)
+#unique(subset(test, test$pred_mod=="mod1")$predicted)
+summary_predicted <-table((subset(test, test$pred_mod=="mod1")$predicted))
+
+```
+
+```{r summary_predicted, echo = F}
+
+barplot(summary_predicted,main="Frequency of number of days predicted")
+print(summary_predicted)
+
 ```
 
 ---
